Wrap for mobile

--- a/style.css
+++ b/style.css
@@ -76,12 +76,14 @@ html {
       display: flex;
       justify-content: center;
       align-items: center;
+     
   }
 
   .flex-form {
       display: flex;
       border: 20px solid rgba(0, 0, 0, 0.3);
       border-radius: 5px;
+      flex-wrap: wrap;
   }
 
   input[type="search"] {
